--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,18 @@
 name: glfw
-description: A simple command-line application.
+description: GLFW3 Dart bindings.
 version: 1.0.0
-# homepage: https://www.example.com
 
 environment:
   sdk: '>=2.15.0-82.0.dev <3.0.0'
 
-
-# dependencies:
-#   path: ^1.8.0
+dependencies: 
+  dylib: ^0.3.2+1
+  ffi: ^1.1.2
 
 dev_dependencies:
   ffigen: ^4.1.1
   lints: ^1.0.0
   tests: ^1.0.0+1
-dependencies: 
-  dylib: ^0.3.2+1
-  ffi: ^1.1.2
 
 ffigen:
   name: GLFW
